Changes hover and color in modal-menu

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
           </ul>
         </nav>
         <!-- ====Mobile-menu-btn-open ============-->
-        <button class="mobile-memu-open" type="button" data-menu-open>
-          <svg class="mobile-menu-opem-icon" width="32" height="22">
+        <button class="mobile-menu-open" type="button" data-menu-open>
+          <svg class="mobile-menu-open-icon" width="32" height="22">
             <use href="./img/icons.svg#icon-hamburger"></use>
           </svg>
         </button>
@@ -523,7 +523,7 @@
     </main>
 
     <!--======================== Footer===================== -->
-    <!-- 
+    
     <footer class="footer">
       <div class="container footer-cocontainer">
         <div class="footer-wrap-logo">
@@ -568,9 +568,9 @@
               </a>
             </li>
           </ul>
-        </div> -->
+        </div>
     <!-- ===========Footer input=========== -->
-    <!-- <div class="footer-subscribe-wrap">
+    <div class="footer-subscribe-wrap">
           <h3 class="footer-soc-title">Subscribe</h3>
           <form>
             <div class="footer-link-btn-wrap">
@@ -593,8 +593,8 @@
           </form>
         </div>
       </div>
-    </footer> -->
-    <!-- ==============================================MODAL WINDOW ========================-->
+    </footer> 
+    <!-- ==============================================MODAL WINDOW ========================
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="modal-close-btn" data-modal-close>
