Changes with class .mobile-menu-open-bnt

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
           </ul>
         </nav>
         <!-- ====Mobile-menu-btn-open ============-->
-        <button class="mobile-menu-open" type="button" data-menu-open>
-          <svg class="mobile-menu-open-icon" width="32" height="22">
+        <button class="mobile-menu-bnt-open" type="button" data-menu-open>
+          <svg class="mobile-menu-open-bnt-icon" width="32" height="22">
             <use href="./img/icons.svg#icon-hamburger"></use>
           </svg>
         </button>
@@ -70,7 +70,7 @@
       </div>
 
       <!-- ================MODAL MENU-================ -->
-      <div class="mob-menu is-hidden" data-menu>
+      <div class="mob-menu is-hidden " data-menu>
         <div class="container-mob-menu mobile-menu-header">
           <div class="mob-menu-top">
             <button class="mobil-menu-close-btn" data-menu-close>
