Changes in footer adaptation

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       </div>
 
       <!-- ================MODAL MENU-================ -->
-      <div class="mob-menu is-hidden " data-menu>
+      <div class="mob-menu is-hidden visually-hidden" data-menu>
         <div class="container-mob-menu mobile-menu-header">
           <div class="mob-menu-top">
             <button class="mobil-menu-close-btn" data-menu-close>
@@ -523,9 +523,9 @@
     </main>
 
     <!--======================== Footer===================== -->
-    
+
     <footer class="footer">
-      <div class="container footer-cocontainer">
+      <div class="container footer-cocontainer footer-mob">
         <div class="footer-wrap-logo">
           <a href="./index.html" class="logo logo-link list link"
             >WEB<span class="footer-logo list link">STUDIO</span></a
@@ -535,7 +535,7 @@
             digital marketing growth solutions.
           </p>
         </div>
-        
+
         <div class="footer-wrap-soc">
           <h3 class="footer-soc-title">Social media</h3>
           <ul class="footer-soc-list">
@@ -569,8 +569,9 @@
             </li>
           </ul>
         </div>
-    <!-- ===========Footer input=========== -->
-    <div class="footer-subscribe-wrap">
+        <!-- ===========Footer input=========== -->
+
+        <div class="footer-subscribe-wrap">
           <h3 class="footer-soc-title">Subscribe</h3>
           <form>
             <div class="footer-link-btn-wrap">
@@ -593,8 +594,8 @@
           </form>
         </div>
       </div>
-    </footer> 
-    <!-- ==============================================MODAL WINDOW ========================
+    </footer>
+    <!--  ==============================================MODAL WINDOW ======================== -->
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="modal-close-btn" data-modal-close>
