Delite class visually-hidden in mob-menu

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       </div>
 
       <!-- ================MODAL MENU-================ -->
-      <div class="mob-menu is-hidden visually-hidden" data-menu>
+      <div class="mob-menu is-hidden" data-menu>
         <div class="container-mob-menu mobile-menu-header">
           <div class="mob-menu-top">
             <button class="mobil-menu-close-btn" data-menu-close>
